mi primera confirmacion de actualizacion

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
       </div>
     <div class="container">
         <h1>Acerca de</h1>
+        <h2>Sin Peca'o</h2>
           <p>Sin Peca'o es una marca de alimentos saludables y deliciosos, diseñados para aquellos que buscan disfrutar de la comida sin remordimientos. Nuestros productos son creados con ingredientes de alta calidad y recetas cuidadosamente seleccionadas para satisfacer tanto el paladar como las necesidades nutricionales. En Sin Peca'o comprobamos que comer saludable no significa renunciar al sabor o la indulgencia, por lo que hemos creado una línea de productos que te permitirán disfrutar de tus comidas favoritas sin preocupaciones. Con Sin Peca'o, puedes pecar sin sentir culpa".</p>    
         </div>    
         <div class="img-container">
